[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.94.0",
    "beautifulsoup4>=4.14.3",
    "claude-agent-sdk>=0.1.58",
    "fastapi>=0.135.3",
    "pandas>=3.0.2",
    "playwright>=1.58.0",
    "requests>=2.33.1",
    "uvicorn>=0.44.0",
]
