[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.94.0",
    "beautifulsoup4>=4.14.3",
    "claude-agent-sdk>=0.1.58",
    "fastapi>=0.135.3",
    "pandas>=3.0.2",
    "playwright>=1.58.0",
    "requests>=2.33.1",
    "sse-starlette>=2.0.0",
    "uvicorn>=0.44.0",
]

[dependency-groups]
dev = [
    "httpx>=0.27.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
